--- a/razas.html
+++ b/razas.html
@@ -35,42 +35,42 @@
 <td><h3>Raza altamente tecnológica, la cual puede ser el mejor tanque del juego o un ser que maneja el poder del rayo. </td>
 </tr>
 <tr>
-<td><h1> Brisflow - Omen <br><img src="razas/BrisflowOmen.png"width="200"></td>
+<td><h1> Brisflow - Omen <br><img src="razas/Omen.png"width="200"></td>
 <td><h1> | </td>
 <td><h3>La Brisflow nigromante, puede ser una invocadora (la mas basica del juego) o una poderosa liche. </td>
 </tr>
 <tr>
-<td><h1> Brisflow - Amenarys <br><img src="razas/BrisflowAmenarys.png"width="200"></td>
+<td><h1> Brisflow - Amenarys <br><img src="razas/Amenarys.png"width="200"></td>
 <td><h1> | </td>
 <td><h3> Las Amenarys son consideradas maestras de 1 o dos elementos. </td>
 </tr>
 <tr>
-<td><h1> Brisflow - Cent' Aury <br><img src="razas/BrisflowCentaury.png"width="250"></td>
+<td><h1> Brisflow - Cent' Aury <br><img src="razas/Cent’ Aury.png"width="250"></td>
 <td><h1> | </td>
 <td><h3> Las Cent' Aury se especializan en lo que es el combate cuerpo a cuerpo, teniendo la forma Aury que son luchadoras y Kalleo que es una asesina. </td>
 </tr>
 <tr>
-<td><h1> Brisflow - Deva <br><img src="razas/BrisflowDeva.png"width="200"></td>
+<td><h1> Brisflow - Deva <br><img src="razas/Deva.png"width="200"></td>
 <td><h1> | </td>
 <td><h3> Las Devas son monjas especializadas en el poder de la luz con grandes habilidades combativas que son muy flexibles. </td>
 </tr>
 <tr>
-<td><h1> Brisflow - Steelcomander <br><img src="razas/BrisflowSteelcomander.png"width="200"></td>
+<td><h1> Brisflow - Steelcomander <br><img src="razas/Steelcomander.png"width="200"></td>
 <td><h1> | </td>
 <td><h3></td>
 </tr>
 <tr>
-<td><h1> Brisflow - Harpia <br><img src="razas/BrisflowHarpia.png"width="200"></td>
+<td><h1> Brisflow - Harpia <br><img src="razas/Harpia.png"width="200"></td>
 <td><h1> | </td>
 <td><h3></td>
 </tr>
 <tr>
-<td><h1> Brisflow - Sequita del caos <br><img src="razas/Brisflowsequita.png"width="200"></td>
+<td><h1> Brisflow - Sequita del caos <br><img src="razas/Sequita del caos.png"width="200"></td>
 <td><h1> | </td>
 <td><h3></td>
 </tr>
 <tr>
-<td><h1>Drikar de las Tinieblas <br><img src="razas/drikartinieblas.png"width="250"></td>
+<td><h1>Drikar de las Tinieblas <br><img src="razas/Drikar de las Tinieblas.png"width="250"></td>
 <td><h1> | </td>
 <td><h3></td>
 </tr>
