--- a/razas.html
+++ b/razas.html
@@ -75,12 +75,12 @@
 <td><h3></td>
 </tr>
 <tr>
-<td><h1></td>
+<td><h1>Merodeador <br><img src="drarios_merodeador.png"width="250"></td>
 <td><h1> | </td>
 <td><h3></td>
 </tr>
 <tr>
-<td><h1></td>
+<td><h1>Caballero Taoh <br><img src="drarios_taoh.png"width="250"></td>
 <td><h1> | </td>
 <td><h3></td>
 </tr>
