--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 <html>
 <head>
-<center><h1>Razas</h1></center>
+<center><h1>Inicio</h1></center>
 <center><table>
 <tr>
-<td> <font color="gold">
-<a href="https://www.twitch.tv/virrgoman">Twich</a></td></font>
+<td>
+<a href="https://www.twitch.tv/virrgoman" style="color: gold;">Twich</a></td></font>
 <td> | </td>
-<td> <font color="gold">
-<a href="razas.html">Razas</a></td></font>
+<a href="razas.html" style="color: gold;">Razas</a></td></font>
 <td> | </td> 
-<td> <font color="gold">
-<a href="lore.html">Lore</a></td></font>
+<a href="lore.html" style="color: gold;">Lore</a></td></font>
 <td> | </td>
-<td> <a href="index.html"><img src="VIRGOMAN.png" alt="Inico"></a></td>
+<td> <a href="index.html" style="color: gold;"><img src="VIRGOMAN.png" alt="Inico"></a></td>
 <td> | </td>
-<td> <font color="gold">
-<a href="recursos.html">Recursos</a></td></font>
+<a href="recursos.html" style="color: gold;">Recursos</a></td></font>
 <td> | </td>
-<td> <font color="gold">
-<a href="oficios.html">oficios</a></td></font>
+<a href="oficios.html" style="color: gold;">oficios</a></td></font>
 <td> | </td>
-<td> <font color="gold">
-<a href="https://www.wattpad.com/story/358504081-la-infinita-creaci%C3%B3n-el-%C3%BAltimo-eiden-lord">Novela</a></td></font>
+<a href="https://www.wattpad.com/story/358504081-la-infinita-creaci%C3%B3n-el-%C3%BAltimo-eiden-lord" style="color: gold;">Novela</a></td></font>
 </tr>
 </table></center>
 <title> Infinita Creacion </title>
