--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 <center><table>
 <tr>
 <td>
-<a href="https://www.twitch.tv/virrgoman" style="color: gold;">Twich</a></td></font>
+<td><a href="https://www.twitch.tv/virrgoman" style="color: gold;">Twitch</a></td>
 <td> | </td>
-<a href="razas.html" style="color: gold;">Razas</a></td></font>
+<td><a href="razas.html" style="color: gold;">Razas</a></td>
 <td> | </td> 
-<a href="lore.html" style="color: gold;">Lore</a></td></font>
+<td><a href="lore.html" style="color: gold;">Lore</a></td>
 <td> | </td>
-<td> <a href="index.html" style="color: gold;"><img src="VIRGOMAN.png" alt="Inico"></a></td>
+<td><a href="index.html"><img src="VIRGOMAN.png" alt="Inicio"></a></td>
 <td> | </td>
-<a href="recursos.html" style="color: gold;">Recursos</a></td></font>
+<td><a href="recursos.html" style="color: gold;">Recursos</a></td>
 <td> | </td>
-<a href="oficios.html" style="color: gold;">oficios</a></td></font>
+<td><a href="oficios.html" style="color: gold;">Oficios</a></td>
 <td> | </td>
-<a href="https://www.wattpad.com/story/358504081-la-infinita-creaci%C3%B3n-el-%C3%BAltimo-eiden-lord" style="color: gold;">Novela</a></td></font>
+<td><a href="https://www.wattpad.com/story/358504081-la-infinita-creaci%C3%B3n-el-%C3%BAltimo-eiden-lord" style="color: gold;">Novela</a></td>
 </tr>
 </table></center>
 <title> Infinita Creacion </title>
 
-<center><body background="GOLDEN_BEAST.png" bgcolor="black" text="white"></center>
+<center><body background="GOLDEN_BEAST.png" bgcolor="black" text="gold"></center>
 <center><table>
 <tr>
 <br><td><h1></h1></center>
