--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <center><h1>Inicio</h1></center>
 <center><table>
 <tr>
-<td><a href="https://www.twitch.tv/virrgoman" style="color: gold; font-size: 120%;">Twitch</a></td>
+            <td><a href="https://www.twitch.tv/virrgoman" style="color: gold; font-size: 1.2em;">Twitch</a></td>
             <td> | </td>
-            <td><a href="razas.html" style="color: gold; font-size:120%;">Razas</a></td>
+            <td><a href="razas.html" style="color: gold; font-size: 1.2em;">Razas</a></td>
             <td> | </td> 
-            <td><a href="lore.html" style="color: gold; font-size:120%;">Lore</a></td>
+            <td><a href="lore.html" style="color: gold; font-size: 1.2em;">Lore</a></td>
             <td> | </td>
-            <td><a href="index.html"><img src=""VIRGOMAN.png" alt="Inicio" style="width:50%;"></a></td>
+            <td><a href="index.html"><img src="VIRGOMAN.png" alt="Inicio" style="width: 50%;"></a></td>
             <td> | </td>
-            <td><a href="recursos.html" style="color: gold; font-size:120%;">Recursos</a></td>
+            <td><a href="recursos.html" style="color: gold; font-size: 1.2em;">Recursos</a></td>
             <td> | </td>
-            <td><a href="oficios.html" style="color: gold; font-size:120%;">Oficios</a></td>
+            <td><a href="oficios.html" style="color: gold; font-size: 1.2em;">Oficios</a></td>
             <td> | </td>
-            <td><a href="https://www.wattpad.com/story/358504081-la-infinita-creaci%C3%B3n-el-%C3%BAltimo-eiden-lord" style="color: gold; font-size:120%;">Novela</a></td>
+            <td><a href="https://www.wattpad.com/story/358504081-la-infinita-creaci%C3%B3n-el-%C3%BAltimo-eiden-lord" style="color: gold; font-size: 1.2em;">Novela</a></td>
         </tr>
 </table></center>
 <title> Infinita Creacion </title>
