--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
 <html>
 <head>
-<center><h1>Inicio</h1></center>
-<center><table>
-<tr>
-            <td><a href="https://www.twitch.tv/virrgoman" style="color: gold; font-size: 1.2em;">Twitch</a></td>
-            <td> | </td>
-            <td><a href="razas.html" style="color: gold; font-size: 1.2em;">Razas</a></td>
-            <td> | </td>
-            <td><a href="index.html"><img src="VIRGOMAN.png" alt="Inicio" style="width: 50%;"></a></td>
-            <td> | </td>
-            <td><a href="https://www.wattpad.com/story/358504081-la-infinita-creaci%C3%B3n-el-%C3%BAltimo-eiden-lord" style="color: gold; font-size: 1.2em;">Novela</a></td>
-        </tr>
-</table></center>
 <title> Infinita Creacion </title>
-
-<center><body background="GOLDEN_BEAST.png" bgcolor="black" text="gold"></center>
-<center><table>
-<tr>
-<br><td><h1></h1></center>
-<br><center><a class="twitter-timeline" data-lang="es" data-width="500" data-height="500" data-dnt="true" data-theme="dark" href="https://twitter.com/uraythelast?ref_src=twsrc%5Etfw">Tweets by uraythelast</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-</td>
-</tr>
-</table></center>
-
 </head>
+<body background="GOLDEN_BEAST.png" bgcolor="black" text="gold">
+<center><h1>Inicio</h1></center>
+<center>
+    <table style="width: 100%;">
+        <tr>
+            <td style="text-align: right; width: 33%;">
+                <a href="https://www.twitch.tv/virrgoman" style="color: gold; font-size: 1.2em;">Twitch</a> | 
+                <a href="razas.html" style="color: gold; font-size: 1.2em;">Razas</a>
+            </td>
+            <td style="text-align: center; width: 33%;">
+                <a href="index.html"><img src="VIRGOMAN.png" alt="Inicio" style="width: 50%;"></a>
+            </td>
+            <td style="text-align: left; width: 33%;">
+                | <a href="https://www.wattpad.com/story/358504081-la-infinita-creaci%C3%B3n-el-%C3%BAltimo-eiden-lord" style="color: gold; font-size: 1.2em;">Novela</a>
+            </td>
+        </tr>
+    </table>
+</center>
+
+<br>
+
+<center>
+    <h1></h1>
+    <a class="twitter-timeline" data-lang="es" data-width="500" data-height="500" data-dnt="true" data-theme="dark" href="https://twitter.com/uraythelast?ref_src=twsrc%5Etfw">Tweets by uraythelast</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</center>
+
 </body>
 </html>
