--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <title> Infinita Creacion </title>
 </head>
 <body background="GOLDEN_BEAST.png" bgcolor="black" text="gold">
-<center><h1>Inicio</h1></center>
 <center>
     <table style="width: 100%;">
         <tr>
-            <td style="text-align: right; width: 33%;">
-                <a href="https://www.twitch.tv/virrgoman" style="color: gold; font-size: 1.2em;">Twitch</a> | 
-                <a href="razas.html" style="color: gold; font-size: 1.2em;">Razas</a>
+            <td style="text-align: center;">
+                <a href="https://www.twitch.tv/virrgoman" style="color: gold; font-size: 1.2em;">Twitch</a> |
+                <a href="razas.html" style="color: gold; font-size: 1.2em;">Razas</a> |
+                <a href="https://www.wattpad.com/story/358504081-la-infinita-creaci%C3%B3n-el-%C3%BAltimo-eiden-lord" style="color: gold; font-size: 1.2em;">Novela</a>
             </td>
-            <td style="text-align: center; width: 33%;">
+        </tr>
+        <tr>
+            <td style="text-align: center;">
                 <a href="index.html"><img src="VIRGOMAN.png" alt="Inicio" style="width: 50%;"></a>
-            </td>
-            <td style="text-align: left; width: 33%;">
-                | <a href="https://www.wattpad.com/story/358504081-la-infinita-creaci%C3%B3n-el-%C3%BAltimo-eiden-lord" style="color: gold; font-size: 1.2em;">Novela</a>
             </td>
         </tr>
     </table>
