--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <table style="width: 100%;">
         <tr>
             <td style="text-align: center;">
-                <a href="https://www.twitch.tv/virrgoman" style="color: gold; font-size: 1.2em;">Twitch</a> |
-                <a href="razas.html" style="color: gold; font-size: 1.2em;">Razas</a> |
+                <a href="https://www.twitch.tv/virrgoman" style="color: gold; font-size: 1.4em;">Twitch</a> |
+                <a href="razas.html" style="color: gold; font-size: 1.4em;">Razas</a> |
             <td style="text-align: center;">
-                <a href="index.html"><img src="VIRGOMAN.png" alt="Inicio" style="width: 50%;"></a>
-                <a href="https://www.wattpad.com/story/358504081-la-infinita-creaci%C3%B3n-el-%C3%BAltimo-eiden-lord" style="color: gold; font-size: 1.2em;">Novela</a>
+                <a href="index.html"><img src="VIRGOMAN.png" alt="Inicio" style="width: 10%;"></a> |
+                <a href="https://www.wattpad.com/story/358504081-la-infinita-creaci%C3%B3n-el-%C3%BAltimo-eiden-lord" style="color: gold; font-size: 1.4em;">Novela</a>
             </td>
         </tr>
         <tr>
