--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 </head>
 <body background="GOLDEN_BEAST.png" bgcolor="black" text="gold">
 <center>
-    <table style="width: 100%;">
+    <table>
         <tr>
-            <td style="text-align: center;">
+            <td>
                 <a href="https://www.twitch.tv/virrgoman" style="color: gold; font-size: 1.4em;">Twitch</a> |
                 <a href="razas.html" style="color: gold; font-size: 1.4em;">Razas</a> |
             <td style="text-align: center;">
