--- a/razas.html
+++ b/razas.html
@@ -1,33 +1,22 @@
 <html>
 <head>
 <title> Infinita Creacion </title>
-<center><h1>Infinita Creación</h1></center>
-<center><table>
-<tr>
-<td> <font color="gold">
-<a href="https://www.twitch.tv/virrgoman">Twich</a></td></font>
-<td> | </td>
-<td> <font color="gold">
-<a href="razas.html">Razas</a></td></font>
-<td> | </td> 
-<td> <font color="gold">
-<a href="lore.html">Lore</a></td></font>
-<td> | </td>
-<td> <a href="index.html"><img src="VIRGOMAN.png" alt="Inico"></a></td>
-<td> | </td>
-<td> <font color="gold">
-<a href="recursos.html">Recursos</a></td></font>
-<td> | </td>
-<td> <font color="gold">
-<a href="oficios.html">oficios</a></td></font>
-<td> | </td>
-<td> <font color="gold">
-<a href="https://www.wattpad.com/story/358504081-la-infinita-creaci%C3%B3n-el-%C3%BAltimo-eiden-lord">Novela</a></td></font>
-</tr>
-</table></center>
+</head>
+<body background="GOLDEN_BEAST.png" bgcolor="black" text="gold">
+<center>
+    <table>
+        <tr>
+            <td>
+                <a href="https://www.twitch.tv/virrgoman" style="color: gold; font-size: 1.4em;">Twitch</a> |
+                <a href="razas.html" style="color: gold; font-size: 1.4em;">Razas</a> |
+                <a href="index.html"><img src="VIRGOMAN.png" alt="Inicio"></a> |
+                <a href="https://www.wattpad.com/story/358504081-la-infinita-creaci%C3%B3n-el-%C3%BAltimo-eiden-lord" style="color: gold; font-size: 1.4em;">Novela</a>
+            </td>
+        </tr>
+        <tr>
+    </table>
+</center>
 
-<body background="GOLDEN_BEAST.png" bgcolor="black" text="white">
-<center><h1><font color="gold">Razas<font color="gold"></font></h1></center>
 <table><center>
 <tr>
 <td><h1>Terracolapser <br><img src="Terracolapser.png" width="200"> </td>
@@ -57,32 +46,32 @@
 <tr>
 <td><h1> Brisflow - Steelcomander <br><img src="Steelcomander.png"width="200"></td>
 <td><h1> | </td>
-<td><h3></td>
+<td><h3> Los famosos héroes de la época del caos. Su valor, destreza y fortaleza los convierten en lideres capaces de lo imposible. </td>
 </tr>
 <tr>
 <td><h1> Brisflow - Harpia <br><img src="Harpia.png"width="200"></td>
 <td><h1> | </td>
-<td><h3></td>
+<td><h3> Salvajes pero muy especiales, las harpias adoptan un papel distinto en función de su elemento al nacer. </td>
 </tr>
 <tr>
 <td><h1> Brisflow - Sequita del caos <br><img src="Sequita del caos.png"width="200"></td>
 <td><h1> | </td>
-<td><h3></td>
+<td><h3> Las guías del bosque brisflow y las únicas que tienen acceso legitimo al poder del caos. </td>
 </tr>
 <tr>
 <td><h1>Drikar de las Tinieblas <br><img src="Drikar de las Tinieblas.png"width="250"></td>
 <td><h1> | </td>
-<td><h3></td>
+<td><h3> Pequeños de estatura pero de basto conocimiento, armados hasta los dientes convocarán un sin fin de guerreros. </td>
 </tr>
 <tr>
 <td><h1>Merodeador <br><img src="drarios_merodeador.png"width="250"></td>
 <td><h1> | </td>
-<td><h3></td>
+<td><h3> Agil, audaz y sobre todo astuto. El merodeador es un tirador y a la vez un atacante muy distinto. </td>
 </tr>
 <tr>
 <td><h1>Caballero Taoh <br><img src="drarios_taoh.png"width="250"></td>
 <td><h1> | </td>
-<td><h3></td>
+<td><h3> Caballeroso y de gran humildad, son seres imposibles de odiar. Luchan por el equilibrio universal usando la luz y la oscuridad. </td>
 </tr>
 <tr>
 <td><h1></td>
