--- a/razas.html
+++ b/razas.html
@@ -98,7 +98,7 @@
         <tr>
             <td><h1>Murshido <br><img src="Murshido.png"width="250"></td>
             <td><h1> | </td>
-            <td><h3></td>
+            <td><h3> Criaturas de las profundidades que resurgen para pelear contra todo aquello que se le encuentre. Violentos y repletos de fortaleza, estas criaturas asquerosas son inmundas. </td>
         </tr>
     </table>
 </center>
