--- a/razas.html
+++ b/razas.html
@@ -21,7 +21,7 @@
     <table>
         <tr>
             <td>
-                <h1>Terracolapser <br><img src="Terracolapser.png" width="200"> </td>
+                <h1>Terracolapser <br><a href="Terracolapser.html"><img src="Terracolapser.png"></a> width="200"> </td>
                 <td><h1> | </td>
                 <td><h3>Raza altamente tecnológica, la cual puede ser el mejor tanque del juego o un ser que maneja el poder del rayo. </td>
         </tr>
