--- a/razas.html
+++ b/razas.html
@@ -76,9 +76,9 @@
             <td><h3> Caballeroso y de gran humildad, son seres imposibles de odiar. Luchan por el equilibrio universal usando la luz y la oscuridad. </td>
         </tr>
         <tr>
-            <td><h1></td>
+            <td><h1>Kaotis <br><img src="Kaotis.png"width="250"></td>
             <td><h1> | </td>
-            <td><h3></td>
+            <td><h3>Seres de poder inmenso, utilizan la energía del caos, la 2da energía más temida de toda la infinita creación debido a su poder acumulativo.</td>
         </tr>
         <tr>
             <td><h1></td>
