--- a/Kaotis.html
+++ b/Kaotis.html
@@ -1,40 +1,275 @@
 <html>
 <head>
-<center><h1>Infinita Creación</h1></center>
-<center><table>
-<tr>
-<td> <font color="gold">
-<a href="https://www.twitch.tv/virrgoman">Twich</a></td></font>
-<td> | </td>
-<td> <font color="gold">
-<a href="razas.html">Razas</a></td></font>
-<td> | </td> 
-<td> <font color="gold">
-<a href="lore.html">Lore</a></td></font>
-<td> | </td>
-<td> <a href="index.html"><img src="VIRGOMAN.png" alt="Inico"></a></td>
-<td> | </td>
-<td> <font color="gold">
-<a href="recursos.html">Recursos</a></td></font>
-<td> | </td>
-<td> <font color="gold">
-<a href="oficios.html">oficios</a></td></font>
-<td> | </td>
-<td> <font color="gold">
-<a href="https://www.wattpad.com/story/358504081-la-infinita-creaci%C3%B3n-el-%C3%BAltimo-eiden-lord">Novela</a></td></font>
-</tr>
-</table></center>
 <title> Infinita Creacion </title>
-
-<center><body background="GOLDEN_BEAST.png" bgcolor="black" text="white"></center>
-<center><table>
-<tr>
-<br><td><h1> En esta pagina iremos agregando notas de parche, actualizaciones y muchas otras cosas de D&D creado por Virrgoman.</h1></center>
-<br><center><a class="twitter-timeline" data-lang="es" data-width="500" data-height="500" data-dnt="true" data-theme="dark" href="https://twitter.com/uraythelast?ref_src=twsrc%5Etfw">Tweets by uraythelast</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-</td>
-</tr>
-</table></center>
-
 </head>
+<body background="GOLDEN_BEAST.png" bgcolor="black" text="gold">
+<center>
+    <table>
+        <tr>
+            <td>
+                <a href="https://www.twitch.tv/virrgoman" style="color: gold; font-size: 1.4em;">Twitch</a> |
+                <a href="razas.html" style="color: gold; font-size: 1.4em;">Razas</a> |
+                <a href="index.html"><img src="VIRGOMAN.png" alt="Inicio"></a> |
+                <a href="https://www.wattpad.com/story/358504081-la-infinita-creaci%C3%B3n-el-%C3%BAltimo-eiden-lord" style="color: gold; font-size: 1.4em;">Novela</a>
+            </td>
+        </tr>
+        <tr>
+    </table>
+</center>
+
+<center>
+    <table>
+        <tr>
+            <td>
+                <h1>Kaotis <br><img src="Kaotis.png" width="300"> </td>
+        </tr>
+        <tr>
+                <td><h1>Descrición:<h1> </td>
+        </tr>
+        <tr>
+                <td><h2>Los duelistas maestros. Especializados en utilizar la magia más temida en toda la infinita creación, la magia del caos. Estos seres de poder inimaginable comprenden mejor que nadie que son anomalías dentro de los mismos kaotis, pues el termino Kjukser, viene a ser una referencia a que son malnacidos del caos, capaces de comprender y razonar a una velocidad más humana y menos tardía, como así lo fue Katharnidios en su momento, que tuvo que pasar muchísimos años para que esta comprendiera la situación y razona finalmente cobrando coherencia y criterio.
+Gracias a todo esto mencionado, Katharnidios les deja el libre paso a salir de la dimensión del caos a todos los Kaotis’ Kjukser(Defectuosos), pues estos no suponen una amenaza para nadie y al contrario, siempre vienen a realizar grandes hazañas desde las sombras, o incluso dar una mano en momentos lúgubres, por increíble que parezca parece ser todo un plan maestro orquestado por seres supremos que buscan hacer del caos algo menos temible y más honrado.
+No obstante el miedo a la época del caos, los Kaotis y en general todo lo referido a ellos, incluyendo su deidad ,Katharnidios, siguen siendo muy fervientes y poco ignorable, pues los kaotis deberán ganarse el respeto y la confianza de todo el mundo que se atreva a habitar.
+ Estilo: KAOTIS
+Atributos: 🎲🀄🎲.
+Dificultad: ⭐⭐⭐⭐⭐⭐
+Dificultad de rol: ⭐⭐⭐
+Requisito de prueba: MAESTRO<h2></td>
+        </tr>
+        <tr>
+                <td><h1>Estadísticas de Kaotis:<h1></td>
+        </tr>
+        <tr>
+                <td><h2>35’ pies base.
++2 DES
++3 SAB
+-5 CAR
++Infinita Agilidad.
++2 Letalidad.
++2 Juego de manos por nivel.
++3 de regeneración de vida por nivel.
+Generas 2 de estrés a toda la party.
+Posees 4 brazos que te permitirán hacer cosas con más facilidad.
+No puedes utilizar equipamiento de ningún tipo.
+<h2></td>
+        </tr>
+        <tr>
+                <td><h1>Dado de daños<h1></td>
+        </tr>
+        <tr>
+                <td><h2>Dado de golpe = 0d0 + 9 por nivel.<h2></td>
+        </tr>
+        <tr>
+                <td><h1>Habilidades pasivas<h1></td>
+        </tr>
+        <tr>
+                <td><h2>☸Hijo de Katharnidios☸:
+Esta pasiva potencia drásticamente el daño de todas tus fuentes que involucran caos.
+Empieza con una base de SAB.
+Cada sesión adquiere ☸+2☸ de este beneficio.
+
+Si llegas a 30 de Estrés deberás tirar 1d20 como el resto, pero si sale negativo o inferior a 19 el dm controlara tu Kaotis para mal, si  sale un 20, lo hará para bien.
+El kaotis y sus invocaciones no poseen daño crítico pero tampoco pifia.
+
+Los kaotis poseen ventajas a la hora de hacer música.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>MANO: 
+Cada que inicia el Asalto el Kaotis roba 4 🎴cartas🎴.
+El primer turno inicia con 2 🎴cartas🎴 extras.
+Máx. cantidad de 🎴cartas🎴 posibles: 10 en tu mano.
+MAZO/Deck:
+Son las 🎴cartas🎴 que puedes robar para poner en tu mano. El mazo lo podrás cambiar diariamente por lo que te guste a libre elección. Tienes un slot de 8 🎴cartas🎴.
+
+
+
+Puedes sacrificar 1 🎴carta🎴 para hacer aparecer 1 Esbirro del caos a 25’ pies.
+Límite de monstruos:
+
+Slots = 5.<h2></td>
+        </tr>
+        <tr>
+                <td><h1>📜Lista de monstruos📜<h1></td>
+        </tr>
+        <tr>
+                <td><h1>Esbirro del caos:<h1></td>
+        </tr>
+        <tr>
+                <td><h1>Estadisticas de la invocación:<h1></td>
+        </tr>
+        <tr>
+                <td><h2>PG: 3 por nivel + 3 por sesión.
+CA: 10 + 3 por nivel.
+Pies: 50’ pies.<h2></td>
+        </tr>
+        <tr>
+                <td><h1>Habilidades de la invocación:<h1></td> 
+        </tr>
+        <tr>
+                <td><h2>Disparo caótico -> Dispara a un enemigo a lo largo de 60'.(E)<h2></td>
+        </tr>
+        <tr>
+                <td><h1>Niveles:<h1></td>
+        </tr>
+        <tr>
+                <td><h2>Nivel 1 =1 Slots.
+SA: +3/6/9/12/15</td><h2>
+        </tr>
+        <tr>
+                <td><h2>Nivel 2 = 2 Slots.
+SA: +6/9/12/15/20
+Añade +1 Terror a los enemigos.<h2></td>
+        </tr>
+        <tr>
+                <td><h1>Tenebris joven:<h1></td>
+        </tr>
+        <tr>
+                <td><h1>Estadisticas de la Invocación:<h1></td>
+        </tr>
+        <tr>
+                <td><h2>PG: 10 por nivel + 6 por sesión.
+	CA: 10 + 3 por nivel
+	Pies: 60’/70’/90’/120’/150’ pies.
+	Acciones: E/R.<h2></td>
+        </tr>
+        <tr>
+                <td><h1>Habilidades de la invocación:<h1></td>
+        </tr>
+        <tr>
+                <td><h2>⚔️Corte del caos⚔️
+Da un poderoso corte que puede convertirse en un corte en área de 5' de distancia o una embestida a un único enemigo la cual le permite mover al enemigo. 
+Puede moverse fuera de su turno y realizar este ataque.
+Puede empujar a los enemigos contra los que choca. máx 25’ pies verdaderos.(E)<h2></td>
+        </tr>
+        <tr>
+                <td><h2>🛡️Custodio del caos🛡️
+Como reacción puedes lanzar esta habilidad.El Tenebris se teletransporta y cubrirá a su dueño del ataque mencionado aplicando su daño de invocación como reducción de daño.
+(R)<h2></td>
+        </tr>
+        <tr>
+                <td><h1>Omen’ Sauren joven:<h1></td>
+        </tr>
+        <tr>
+                <td><h1>Estadisticas de la invocación:<h1></td>
+        </tr>
+        <tr>
+                <td><h2>PG: 10 por nivel + 6 por sesión.
+	CA: 10 + 3 por nivel.
+	Pies: 60’/70’/90’/120’/150’ pies.
+	Acciones: E/B.<h2></td>
+        </tr>
+        <tr>
+                <td><h1>Habilidades de la invocación:<h1></td>
+        </tr>
+        <tr>
+                <td><h2>🔥Llamarada del caos🔥
+Arrasa a los enemigos con una poderosa carga caótica que los quemara vivos.75' de alcance.
+Puede aplicarse en un área de 5’x5' pies.
+(E/B).<h2></td>
+        </tr>
+        <tr>
+                <td><h2>🎇Orbe caótico🎇
+Crea una zona caótica. Al volver a ser tu turno aplica el daño 2 veces.
+Alcance de aura 10’.
+Puede acumularse con otros 🎇Orbe caótico🎇.
+75’ Alcance máx.
+(E).<h2></td>
+        </tr>
+        <tr>
+                <td><h1>Nefaliuz:<h1></td>
+        </tr>
+        <tr>
+                <td><h1>Estadisticas de la invocación<h1></td>
+        </tr>
+        <tr>
+                <td><h2>PG: 10 por nivel + 6 por sesión.
+	CA: 10 + 3 por nivel.
+	Pies: 60’/70’/90’/120’/150’ pies.
+	Acciones: E/B.<h2></td>
+        </tr>
+        <tr>
+                <td><h1>Habilidades de la invocación:<h2></td>
+        </tr>
+        <tr>
+                <td><h2>🗡️Espada oscura🗡️
+Da un corte a un único objetivo.
+(E/B)<h2></td>
+        </tr>
+        <tr>
+                <td><h2>👁️Anochecer👁️ Crea una copia a lo largo de 45’ verdaderos.
+Al iniciar tu turno traza una línea verdadera y atraviesa a todos los enemigos/aliados. Los objetivos atravesados sufren el daño 2 veces.
+(E).<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Nivel 3 = 3 Slots.
+SA: +9/12/15/20/33
+Añade +3 al estrés global.
+Añade +3 Terror a los enemigos.<h2></td>
+        </tr>
+        <tr>
+                <td><h1>Tenebris:<h1></td>
+        </tr>
+        <tr>
+                <td><h1>estadisticas de la invocacion:<h1></td>
+        </tr>
+        <tr>
+                <td><h2>🔪Espadón de Tenebris🔪
+Da un poderoso corte que puede convertirse en un corte en área de 5' de distancia o una embestida a un único enemigo la cual le permite mover al enemigo. 
+Puede moverse fuera de su turno y realizar este ataque.
+Puede empujar a los enemigos contra los que choca. máx 45’ pies verdaderos.
+(E/B)<h2></td>
+        </tr>
+        <tr>
+                <td><h2>☄️Acometida abismal☄️
+Crea una copia a lo largo de 90’ verdaderos.
+Al iniciar tu turno traza una línea verdadera y atraviesa a todos los enemigos/aliados. Los objetivos atravesados sufren el daño 3 veces.
+(E).<h2></td>
+        </tr>
+        <tr>
+                <td><h2>🛡️Gesto del caballero🛡️
+El tenebris se teleporta a donde se encuentra su dueño y lo cubre del ataque con su cuerpo.
+(R).<h2></td>
+        </tr>
+        <tr>
+                <td><h1>Omen’ Sauren:<h1></td>
+        </tr>
+        <tr>
+                <td><h1>Estadisticas de la invocación<h1></td>
+        </tr>
+        <tr>
+                <td><h2>PG: 30 por nivel + 6 por sesión.
+	CA: 10 + 3 por nivel.
+	Pies: 75’/90’/115’/145’/175’ pies.
+	Acciones: E/B/B/R.<h2></td>
+        </tr>
+        <tr>
+                <td><h1>Habilidades de la invocación:<h1></td>
+        </tr>
+        <tr>
+                <td><h2>☸Pilar del caos☸
+Puede lanzar un pilar del caos sobre un enemigo a elección.
+(E/B).<h2></td>
+        </tr>
+        <tr>
+                <td><h2>🌹Pareja de baile🌹:
+🌹⌚Show Time⌚🌹 Ahora te permite realizar un ataque combinado.
+Cuando tu aliado ataca a un enemigo, siempre y cuando te encuentres en 🌹⌚Show Time⌚🌹, tu última acción combina el daño de ambos jugadores haciendo que el ataque de ambos posea ventaja, +5 a la precisión y curarse ambos 1 de estrés.<h2></td>
+        </tr>
+        <tr>
+                <td><h2>🌹Baile de Pistolero🌹:
+Al entrar en 🌹⌚Show Time⌚🌹, Si otro jugador lanza una habilidad que aplique -Efecto fuera de turno- De tipo “Jugador debe atacar fuera de su turno, jugador realiza una acción sobre tí fuera de tu turno”, padecer de efectos similares o otro tipo de 🌹⌚Show Time⌚🌹, Se realiza 1 🔫Disparo rápido🔫 extra y tu pareja también puede lanzar otra habilidad de su kit como gratuita fuera de su turno.<h2></td>
+        </tr>
+        <tr>
+    </table>
+</center>
+
+<br>
+
+<center>
+    <h1></h1>
+    <a class="twitter-timeline" data-lang="es" data-width="500" data-height="500" data-dnt="true" data-theme="dark" href="https://twitter.com/uraythelast?ref_src=twsrc%5Etfw">Tweets by uraythelast</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</center>
+
 </body>
 </html>
