--- a/Kaotis.html
+++ b/Kaotis.html
@@ -528,8 +528,9 @@ Puedes sacrificar los puntos de ⚜️Honor de caballero⚜️ para adquirir efe
         </tr>
         <tr>
                 <td><h2>4 ⚜️ → Robas una 🎴 del Deck a elección.<h2></td>
-
-DECK 🔻REDBRISS🔻
+        </tr>
+        <tr>
+                <td><h2>DECK 🔻REDBRISS🔻
 
 🎴Caballeros al margen🎴
 → Cuando tu o un aliado reciben un ataque, Manifiesta un Bloqueo con ☸Ataque caótico☸. Deja a la invocación a 5’ pies del objetivo.
@@ -982,7 +983,7 @@ Ella pertenece a la familia “EL ÉXODO DE LOS INVICTOS”
 
 (9 🧟🥇RHYMERA🥇🧟, haber sacrificado 6 📜Slots📜)
 
-Requisito: 🌹Crimson Rose🌹 (Brisflow) y el Kaotis. Requieres hacer la prueba de la codicia y tu personaje debe pasar ciertos caprichos del DM en caso de ser Kaotis(Katharnidios). Este deck, te reniega de otras familias. Se pueden negociar cambios, pero no será barato o directamente no se podrá.
+Requisito: 🌹Crimson Rose🌹 (Brisflow) y el Kaotis. Requieres hacer la prueba de la codicia y tu personaje debe pasar ciertos caprichos del DM en caso de ser Kaotis(Katharnidios). Este deck, te reniega de otras familias. Se pueden negociar cambios, pero no será barato o directamente no se podrá.<h2></td>
 
 
 
