--- a/Kaotis.html
+++ b/Kaotis.html
@@ -443,13 +443,13 @@ Solo puede utilizarse una vez por turno.<h2></td>
         <tr>
                 <td><h2>Enloquecer: 
 Añades locura sobre la criatura seleccionada. Debe superar una salvación con su Caract. de WIS/CON/INT/CAR contra tu Caracteristica de  WIS.<h2></td>
-
-Si logras afectar aplicas +1 al Terror
-Si el enemigo falla, su siguiente acción estándar puede ser controlada por ti.
-Solo puede utilizarse una vez por turno.<h2></td>
         </tr>
         <tr>
-                <td><h2>Destierro del caos:
+                <td><h2>Si logras afectar aplicas +1 al Terror
+Si el enemigo falla, su siguiente acción estándar puede ser controlada por ti.
+Solo puede utilizarse una vez por turno.<h2></td>
+
+Destierro del caos:
 Destierras la mente del objetivo al reino del caos solo por unos segundos, esto aplica 💫Contusión💫 nivel 6.
 +3 Terror. 
 Solo puede utilizarse una vez por turno.<h2></td>
