--- a/Kaotis.html
+++ b/Kaotis.html
@@ -448,8 +448,9 @@ Añades locura sobre la criatura seleccionada. Debe superar una salvación con s
                 <td><h2>Si logras afectar aplicas +1 al Terror
 Si el enemigo falla, su siguiente acción estándar puede ser controlada por ti.
 Solo puede utilizarse una vez por turno.<h2></td>
-
-Destierro del caos:
+        </tr>
+        <tr>
+                <td><h2>Destierro del caos:
 Destierras la mente del objetivo al reino del caos solo por unos segundos, esto aplica 💫Contusión💫 nivel 6.
 +3 Terror. 
 Solo puede utilizarse una vez por turno.<h2></td>
