--- a/Kaotis.html
+++ b/Kaotis.html
@@ -341,7 +341,7 @@ Puede aplicarse sobre ti o sobre un aliado.
 En caso de hacerlo sobre un aliado se romperá al primer impacto.<h2></td>
         </tr>
         <tr>
-                <td><h1>Defensa Defensa:<h1></td>
+                <td><h1>Deck Defensa:<h1></td>
         </tr>
         <tr>
                 <td><h2>Las Habilidades de este Deck Están conformadas por habilidades únicas que se centran en proteger a su lanzador, tanto ya sea de manera ofensiva, pasiva o incluso por medios más complejos.<h2></td>
