--- a/Kaotis.html
+++ b/Kaotis.html
@@ -531,26 +531,30 @@ Puedes sacrificar los puntos de ⚜️Honor de caballero⚜️ para adquirir efe
                 <td><h2>4 ⚜️ → Robas una 🎴 del Deck a elección.<h2></td>
         </tr>
         <tr>
-                <td><h2>DECK 🔻REDBRISS🔻
-
-🎴Caballeros al margen🎴
+                <td><h1>DECK 🔻REDBRISS🔻<h1></td>
+        </tr>
+        <tr>
+                <td><h2>🎴Caballeros al margen🎴
 → Cuando tu o un aliado reciben un ataque, Manifiesta un Bloqueo con ☸Ataque caótico☸. Deja a la invocación a 5’ pies del objetivo.
 (Máx. una vez por turno)
-(🎴)
-
-🎴Soplido de Herejes🎴
+(🎴)<h2></td>
+        </tr>
+        <tr>
+                <td><h2>🎴Soplido de Herejes🎴
 → Convoca a un soplido de herejes qué cura a todas tus invocaciones Redbriss  10PG por nivel. Aplica sobre curación a las invocaciones Redbriss.
 +1⚜️
 (Máx. 2 por turno)
-(🎴)
-🎴El Bosque de la Herejía roja🎴
+(🎴)<h2></td>
+        </tr>
+        <tr>
+                <td><h2>🎴El Bosque de la Herejía roja🎴
 → Convoca al inmenso bosque de la herejía roja. Afecta en un aura de 25’ pies de alcance. Todos las las invocaciones Redbriss adquieren 4 de 🛡️Armadura🛡️ por nivel.
 Este bosque dura hasta el final del combate o que sea destruido por 2 golpes.
 Solo puede haber un Bosque de la herejía roja.
 Si invocas otro, el anterior desaparecerá.
 (🎴)
 
-Requisito: 🌹Linaje RedBriss🌹 (Brisflow)
+Requisito: 🌹Linaje RedBriss🌹 (Brisflow)<h2></td>
 
 
 
