--- a/razas.html
+++ b/razas.html
@@ -66,7 +66,7 @@
             <td><h3> Pequeños de estatura pero de basto conocimiento, armados hasta los dientes convocarán un sin fin de guerreros. </td>
         </tr>
         <tr>
-            <td><h1>Merodeador <br><img src="drarios_merodeador.png"width="220"></td>
+            <td><h1>Merodeador <br><a href="Merodeador.html"><img src="drarios_merodeador.png"width="220"></td>
             <td><h1> | </td>
             <td><h3> Agil, audaz y sobre todo astuto. El merodeador es un tirador y a la vez un atacante muy distinto. </td>
         </tr>
