--- a/Kaotis.html
+++ b/Kaotis.html
@@ -705,8 +705,9 @@ Puedes manifestar este 🕯️🩸Presagio🩸🕯️ sobre cualquier Enemigo, e
         </tr>
         <tr>
                 <td><h2>5 😢 → La invocación seleccionada entra en un estado de -Redención- Adquiere 1 acción extra hasta el resto del combate.<h2></td>
-
-DECK 💀💧LOS MÁRTIRES DEL CAOS💧💀
+        </tr>
+        <tr>
+                <td><h2>DECK 💀💧LOS MÁRTIRES DEL CAOS💧💀
 
 🎴Recordatorio del Mártir🎴
 → Aplicas + 6 niveles de 🕯️🩸Presagio🩸🕯️.
