--- a/Terracolapser.html
+++ b/Terracolapser.html
@@ -1,6 +1,16 @@
 <html>
 <head>
 <title> Infinita Creacion </title>
+<style>
+    h1, h2, a {
+        color: gold; /* Mantiene el color dorado del texto */
+        text-shadow: 
+            -1px -1px 0 #000,  
+             1px -1px 0 #000,
+            -1px  1px 0 #000,
+             1px  1px 0 #000; /* Borde negro */
+    }
+</style>
 </head>
 <body background="GOLDEN_BEAST.png" bgcolor="black" text="gold">
 <center>
