--- a/razas.html
+++ b/razas.html
@@ -31,14 +31,14 @@
     <table>
         <tr>
             <td>
-                <h1>Terracolapser <br><a href="Terracolapser.html"><img src="Terracolapser.png" width="200"></a> </td>
+                <h1>Terracolapser<br><a href="Terracolapser.html"><img src="Terracolapser.png" width="200"></a> </td>
                 <td><h1> | </td>
-                <td><h3>Raza altamente tecnológica, la cual puede ser el mejor tanque del juego o un ser que maneja el poder del rayo. </td>
+                <td><h2>Raza altamente tecnológica, la cual puede ser el mejor tanque del juego o un ser que maneja el poder del rayo.</td>
         </tr>
         <tr>
-            <td><h1> Brisflow - Omen <br><img src="Omen.png"width="200"></td>
+            <td><h1>Brisflow - Omen<br><img src="Omen.png"width="200"></td>
             <td><h1> | </td>
-            <td><h3>La Brisflow nigromante, puede ser una invocadora (la mas basica del juego) o una poderosa liche. </td>
+            <td><h2>La Brisflow nigromante, puede ser una invocadora (la mas basica del juego) o una poderosa liche. </td>
         </tr>
         <tr>
             <td><h1> Brisflow - Amenarys <br><img src="Amenarys.png"width="200"></td>
@@ -51,64 +51,64 @@
             <td><h3> Las Cent' Aury se especializan en lo que es el combate cuerpo a cuerpo, teniendo la forma Aury que son luchadoras y Kalleo que es una asesina. </td>
         </tr>
         <tr>
-            <td><h1> Brisflow - Deva <br><img src="Deva.png"width="190"></td>
+            <td><h1> Brisflow - Deva<br><img src="Deva.png"width="190"></td>
             <td><h1> | </td>
-            <td><h3> Las Devas son monjas especializadas en el poder de la luz con grandes habilidades combativas que son muy flexibles. </td>
+            <td><h2> Las Devas son monjas especializadas en el poder de la luz con grandes habilidades combativas que son muy flexibles. </td>
         </tr>
         <tr>
-            <td><h1> Brisflow - Steelcomander <br><img src="Steelcomander.png"width="200"></td>
+            <td><h1>Brisflow - Steelcomander<br><img src="Steelcomander.png"width="200"></td>
             <td><h1> | </td>
-            <td><h3> Los famosos héroes de la época del caos. Su valor, destreza y fortaleza los convierten en lideres capaces de lo imposible. </td>
+            <td><h2>Los famosos héroes de la época del caos. Su valor, destreza y fortaleza los convierten en lideres capaces de lo imposible. </td>
         </tr>
         <tr>
-            <td><h1> Brisflow - Harpia <br><img src="Harpia.png"width="270"></td>
+            <td><h1>Brisflow - Harpia<br><img src="Harpia.png"width="270"></td>
             <td><h1> | </td>
-            <td><h3> Salvajes pero muy especiales, las harpias adoptan un papel distinto en función de su elemento al nacer. </td>
+            <td><h2>Salvajes pero muy especiales, las harpias adoptan un papel distinto en función de su elemento al nacer. </td>
         </tr>
         <tr>
-            <td><h1> Brisflow - Sequita del caos <br><img src="Sequita del caos.png"width="200"></td>
+            <td><h1>Brisflow - Sequita del caos<br><img src="Sequita del caos.png"width="200"></td>
             <td><h1> | </td>
-            <td><h3> Las guías del bosque brisflow y las únicas que tienen acceso legitimo al poder del caos. </td>
+            <td><h2> Las guías del bosque brisflow y las únicas que tienen acceso legitimo al poder del caos. </td>
         </tr>
         <tr>
-            <td><h1>Drikar de las Tinieblas <br><img src="Drikar de las Tinieblas.png"width="250"></td>
+            <td><h1>Drikar de las Tinieblas<br><img src="Drikar de las Tinieblas.png"width="250"></td>
             <td><h1> | </td>
-            <td><h3> Pequeños de estatura pero de basto conocimiento, armados hasta los dientes convocarán un sin fin de guerreros. </td>
+            <td><h2> Pequeños de estatura pero de basto conocimiento, armados hasta los dientes convocarán un sin fin de guerreros. </td>
         </tr>
         <tr>
-            <td><h1>Merodeador <br><a href="Merodeador.html"><img src="drarios_merodeador.png"width="220"></td>
+            <td><h1>Merodeador<br><a href="Merodeador.html"><img src="drarios_merodeador.png"width="220"></td>
             <td><h1> | </td>
-            <td><h3> Agil, audaz y sobre todo astuto. El merodeador es un tirador y a la vez un atacante muy distinto. </td>
+            <td><h2> Agil, audaz y sobre todo astuto. El merodeador es un tirador y a la vez un atacante muy distinto. </td>
         </tr>
         <tr>
-            <td><h1>Caballero Taoh <br><img src="drarios_taoh.png"width="200"></td>
+            <td><h1>Caballero Taoh<br><img src="drarios_taoh.png"width="200"></td>
             <td><h1> | </td>
-            <td><h3> Caballeroso y de gran humildad, son seres imposibles de odiar. Luchan por el equilibrio universal usando la luz y la oscuridad. </td>
+            <td><h2> Caballeroso y de gran humildad, son seres imposibles de odiar. Luchan por el equilibrio universal usando la luz y la oscuridad. </td>
         </tr>
         <tr>
-            <td><h1>Kaotis <br><a href="Kaotis.html"><img src="Kaotis.png" width="200"></td>
+            <td><h1>Kaotis<br><a href="Kaotis.html"><img src="Kaotis.png" width="200"></td>
             <td><h1> | </td>
-            <td><h3>Seres de poder inmenso, utilizan la energía del caos, la 2da energía más temida de toda la infinita creación debido a su poder acumulativo.</td>
+            <td><h2>Seres de poder inmenso, utilizan la energía del caos, la 2da energía más temida de toda la infinita creación debido a su poder acumulativo.</td>
         </tr>
         <tr>
-            <td><h1></td>
-            <td><h1> | </td>
-            <td><h3></td>
-        </tr>
-        <tr>
-            <td><h1></td>
-            <td><h1> | </td>
-            <td><h3></td>
+            <td><h1>Brisflow - Huntflow<br><img src="Huntflow.png" width="200"></td>
+            <td><h1>|</td>
+            <td><h2>Cazadoras del bosque brisflow, domadoras y guerreras bastante salvajes</td>
         </tr>
         <tr>
             <td><h1></td>
-            <td><h1> | </td>
-            <td><h3></td>
+            <td><h1>|</td>
+            <td><h2></td>
         </tr>
         <tr>
-            <td><h1>Murshido <br><img src="Murshido.png"width="250"></td>
+            <td><h1></td>
+            <td><h1>|</td>
+            <td><h2></td>
+        </tr>
+        <tr>
+            <td><h1>Murshido<br><img src="Murshido.png"width="250"></td>
             <td><h1> | </td>
-            <td><h3> Criaturas de las profundidades que resurgen para pelear contra todo aquello que se le encuentre. Violentos y repletos de fortaleza, estas criaturas asquerosas son inmundas. </td>
+            <td><h2>Criaturas de las profundidades que resurgen para pelear contra todo aquello que se le encuentre, violentos y repletos de fortaleza, estas criaturas asquerosas son inmundas.</td>
         </tr>
     </table>
 </center>
