--- a/razas.html
+++ b/razas.html
@@ -91,7 +91,7 @@
             <td><h2>Seres de poder inmenso, utilizan la energía del caos, la 2da energía más temida de toda la infinita creación debido a su poder acumulativo.</td>
         </tr>
         <tr>
-            <td><h1>Brisflow - Huntflow<br><img src="Huntflow.png" width="200"></td>
+            <td><h1>Brisflow - Huntflow<br><a href="Huntflow.html"><img src="Huntflow.png" width="200"></td>
             <td><h1>|</td>
             <td><h2>Cazadoras del bosque brisflow, domadoras y guerreras bastante salvajes</td>
         </tr>
