--- a/Terracolapser.html
+++ b/Terracolapser.html
@@ -67,6 +67,12 @@
                 <td><h2>Dificultad: ⭐⭐<h2></td>
         </tr>
         <tr>
+                <td><h2>Dificultad de rol: ⭐⭐<h2></td>
+        </tr>
+        <tr>
+                <td><h2>Requisito de prueba: Común.<h2></td>
+        </tr>
+        <tr>
                 <td><h1><center>Estadísticas de Terracolapser:</center><h1></td>
         </tr>
         <tr>
