--- a/Huntflow.html
+++ b/Huntflow.html
@@ -31,7 +31,7 @@
     <table>
         <tr>
             <td>
-                <h1><center>Terracolapser <br><img src="Huntflow.png.png" width="300"></center></td>
+                <h1><center>Terracolapser <br><img src="Huntflow.png" width="300"></center></td>
         </tr>
         <tr>
                 <td><h1><center>Descrición:</center><h1> </td>
