--- a/razas.html
+++ b/razas.html
@@ -81,7 +81,7 @@
             <td><h2> Agil, audaz y sobre todo astuto. El merodeador es un tirador y a la vez un atacante muy distinto. </td>
         </tr>
         <tr>
-            <td><h1>Caballero Taoh<br><a href="Taoh.html"><img src=drarios_taoh.png"width="200"></td>
+            <td><h1>Caballero Taoh<br><a href="Taoh.html"><img src="drarios_taoh.png"width="200"></td>
             <td><h1> | </td>
             <td><h2> Caballeroso y de gran humildad, son seres imposibles de odiar. Luchan por el equilibrio universal usando la luz y la oscuridad. </td>
         </tr>
